--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MMB Variedade</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="./image/capa_mmb.png">
+  <img src="./image/capa_mmb.png" alt="Logo MMB Variedade">
 
   <!-- CSS externo -->
   <link rel="stylesheet" href="./css/style.css">
@@ -43,30 +43,30 @@
       </div>
 
       <div class="card">
-        <img src="./image/f896176d-a231-445a-80b1-d00b64780432-bot-84390-malbec-magnetic-desodorante-colonia-frontal-01.webp" alt="Perfume">
-        <h3>Malbec Magnetic Desodorante Colônia 100Ml</h3>
-        <p>R$ 200,00</p>
+        <img src="./image/dc3c1f13-3d21-4274-9d50-4be908bb3f35-74438.webp" alt="Perfume">
+        <h3>Arbo Desodorante Colônia 100Ml</h3>
+        <p>R$ 124,90</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
       <div class="card">
-        <img src="./image/f896176d-a231-445a-80b1-d00b64780432-bot-84390-malbec-magnetic-desodorante-colonia-frontal-01.webp" alt="Perfume">
-        <h3>Malbec Magnetic Desodorante Colônia 100Ml</h3>
-        <p>R$ 200,00</p>
+        <img src="./image/4101f6c8-c76a-49da-804f-c2eb9aa3918a-e87380-lyra-happy-des-col-75ml-1.webp" alt="Perfume">
+        <h3>Lyra Happy Desodorante Colônia 75Ml</h3>
+        <p>R$ 120,00</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
       <div class="card">
-        <img src="./image/f896176d-a231-445a-80b1-d00b64780432-bot-84390-malbec-magnetic-desodorante-colonia-frontal-01.webp" alt="Perfume">
-        <h3>Malbec Magnetic Desodorante Colônia 100Ml</h3>
-        <p>R$ 200,00</p>
+        <img src="./image/5aaab5f7-23ef-4408-8d93-f2f523ae51a5-colonia-des-diva-e93544-fechado.webp" alt="Perfume">
+        <h3>Diva Desodorante Colônia 100Ml</h3>
+        <p>R$ 110,00</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
       <div class="card">
-        <img src="./image/f896176d-a231-445a-80b1-d00b64780432-bot-84390-malbec-magnetic-desodorante-colonia-frontal-01.webp" alt="Perfume">
-        <h3>Malbec Magnetic Desodorante Colônia 100Ml</h3>
-        <p>R$ 200,00</p>
+        <img src="./image/3490a49c-cd41-4795-b2da-8b0ad726584f-bot-52041-lily-lumiere-desodorante-antitranspirante-aerossol-frontal-01.webp" alt="Perfume">
+        <h3>Desodorante Antitranspirante Aerosol Lily Lumière 75G/125Ml</h3>
+        <p>R$ 30,00</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
     </div>
