featured: add config correta

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <title>MMB Variedade</title>
 
   <!-- Favicon -->
-  <img src="./image/capa_mmb.png" alt="Logo MMB Variedade">
+  <link rel="icon" type="image/png" href="./image/capa_mmb.png">
 
   <!-- CSS externo -->
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <header>
-  </header>
+  <header></header>
 
   <nav>
     <!-- Adicione links do menu aqui -->
