--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
         <p>R$ 30,00</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
+
+      <div class="card">
+        <img src="./image/BOT_NATIVA-SPA_ORQUIDEA_OLEO-CORPORAL_51869_AMBIENTADA_2.webp" alt="Perfume">
+        <h3>Óleo Hidratante Desodorante Corporal Nativa Spa Orquídea Noire 200Ml</h3>
+        <p>R$ 84,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
     </div>
   </main>
 
