--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
         <p>R$ 84,90</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
+
+      <div class="card">
+        <img src="./image/2bf39bfd-6dc1-49b9-bb25-9007939b6fd9-bot-48999-ambientada.webp" alt="Perfume">
+        <h3>Óleo Hidratante Corporal Nativa Spa Ameixa Negra 200Ml</h3>
+        <p>R$ 84,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/Nspa-Ol-Des-Hid-Cpo-Amei-200Ml-V3_B48997_conceito.webp" alt="Perfume">
+        <h3>Óleo Hidratante Desodorante Corporal Nativa Spa Ameixa 200Ml</h3>
+        <p>R$ 84,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
     </div>
   </main>
 
