--- a/index.html
+++ b/index.html
@@ -89,6 +89,34 @@
         <p>R$ 84,90</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
+
+      <div class="card">
+        <img src="./image/6b675eda-240c-445a-864c-d73490920893-bot-51123-cuide-se-bem-boa-noite-body-splash-frontal-segredinho-02.webp" alt="Perfume">
+        <h3>Body Splash Desodorante Colônia Cuide-Se Bem Boa Noite 200Ml</h3>
+        <p>R$ 74,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/b066bf9a-cddb-43d3-9796-cecfd36c2ebe-bot-50881-cuide-se-bem-de-leite-body-splash-frontal-01.webp" alt="Perfume">
+        <h3>Body Splash Cuide-Se Bem Deleite 200Ml</h3>
+        <p>R$ 74,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/b309cd41-9777-404f-927e-25e8af06b532-bot-51239-cuide-se-bem-cereja-livre-body-splash-frontal-01.webp" alt="Perfume">
+        <h3>Body Splash Desodorante Colônia Cuide-Se Bem Cereja Livre 200Ml</h3>
+        <p>R$ 74,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/751fa7f4-97bb-4872-9acf-40d0fda8a6bb-bot-51147-cuide-se-bem-nuvem-body-splash-frontal-01-copiar.webp" alt="Perfume">
+        <h3>Body Splash Desodorante Colônia Cuide-Se Bem Nuvem 200Ml</h3>
+        <p>R$ 74,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
     </div>
   </main>
 
