--- a/index.html
+++ b/index.html
@@ -117,6 +117,42 @@
         <p>R$ 74,90</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
+
+      <div class="card">
+        <img src="./image/zaad_B48359_segredinhos.webp" alt="Perfume">
+        <h3>Zaad Eau De Parfum 50Ml</h3>
+        <p>R$ 174,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/e7eb2972-3a69-4a84-84dd-f71fc21de4a0-bot-55366-arbo-atlantica-desodorante-colonia-02.webp" alt="Perfume">
+        <h3>Arbo Atlântica Desodorante Colônia 100Ml</h3>
+        <p>R$ 120,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/93345443-a07a-4929-bf4f-cfe1aa031aa8-bot-52052-celebre-agora-masculino-colonia-frontal-01.webp" alt="Perfume">
+        <h3>Celebre Agora Masculino Desodorante Colônia 100Ml</h3>
+        <p>R$ 80,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/93345443-a07a-4929-bf4f-cfe1aa031aa8-bot-52052-celebre-agora-masculino-colonia-frontal-01.webp" alt="Perfume">
+        <h3>Celebre Agora Masculino Desodorante Colônia 100Ml</h3>
+        <p>R$ 80,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/c625e065-3c4c-47eb-b27d-ebdff1124414-bot-52044-celebre-des-col-fem-segredinho.webp" alt="Perfume">
+        <h3>Celebre Agora Feminino Desodorante Colônia 100Ml</h3>
+        <p>R$ 80,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
     </div>
   </main>
 
