--- a/index.html
+++ b/index.html
@@ -140,16 +140,30 @@
       </div>
 
       <div class="card">
-        <img src="./image/93345443-a07a-4929-bf4f-cfe1aa031aa8-bot-52052-celebre-agora-masculino-colonia-frontal-01.webp" alt="Perfume">
-        <h3>Celebre Agora Masculino Desodorante Colônia 100Ml</h3>
+        <img src="./image/c625e065-3c4c-47eb-b27d-ebdff1124414-bot-52044-celebre-des-col-fem-segredinho.webp" alt="Perfume">
+        <h3>Celebre Agora Feminino Desodorante Colônia 100Ml</h3>
         <p>R$ 80,00</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
       <div class="card">
-        <img src="./image/c625e065-3c4c-47eb-b27d-ebdff1124414-bot-52044-celebre-des-col-fem-segredinho.webp" alt="Perfume">
-        <h3>Celebre Agora Feminino Desodorante Colônia 100Ml</h3>
-        <p>R$ 80,00</p>
+        <img src="./image/EGEO-DES-COL-ORIGNL-90ml-V2_B49812_SEGREDINHO.webp" alt="Perfume">
+        <h3>Egeo Original Desodorante Colônia 90Ml</h3>
+        <p>R$ 124,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/314b8de1-a1ac-4c9f-b9a6-5e1a47a0b677-bot-87067-egeo-cogu-mellow-06.webp" alt="Perfume">
+        <h3>Egeo Cogu Mellow Desodorante Colônia 90Ml</h3>
+        <p>R$ 124,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/db0e943e-9d27-4464-97ef-ecb1d51848c1-bot-87139-egeo-cogu-desodorante-colonia-04.webp" alt="Perfume">
+        <h3>Egeo Cogu Desodorante Colônia 90Ml</h3>
+        <p>R$ 124,90</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
