--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       </div>
 
       <div class="card">
+        <img src="./image/6093b571-90ca-4e2d-9f25-e5a885d99601-bot-58506-malbec-pure-gold-desodorante-colonia-02.webp" alt="Perfume">
+        <h3>Malbec Pure Gold Desodorante Colônia 100Ml</h3>
+        <p>R$ 170,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
         <img src="./image/1af375cb-0fb1-462e-916a-da119ae9e243-malbec-black-desodorante-colonia-100ml.webp" alt="Perfume">
         <h3>Malbec Black Desodorante Colônia 100Ml</h3>
         <p>R$ 220,00</p>
