--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
   <main class="content">
     <div class="container">
       <div class="card">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/B48130_Malbec_Desodorante_Colônia_1.webp" alt="Perfume">
         <h3>Malbec Desodorante Colônia 100Ml</h3>
-        <p>R$ 170,00</p>
+        <p><span class="preco-antigo">R$ 200,00</span> <span class="preco-novo">R$ 170,00</span></p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
+      
 
       <div class="card">
         <img src="./image/6093b571-90ca-4e2d-9f25-e5a885d99601-bot-58506-malbec-pure-gold-desodorante-colonia-02.webp" alt="Perfume">
