--- a/index.html
+++ b/index.html
@@ -24,29 +24,31 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/B48130_Malbec_Desodorante_Colônia_1.webp" alt="Perfume">
         <h3>Malbec Desodorante Colônia 100Ml</h3>
-        <p><span class="preco-antigo">R$ 200,00</span> <span class="preco-novo">R$ 170,00</span></p>
+        <p><span class="preco-antigo">R$ 209,90</span> <span class="preco-novo">R$ 170,00</span></p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
-      
 
       <div class="card">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/6093b571-90ca-4e2d-9f25-e5a885d99601-bot-58506-malbec-pure-gold-desodorante-colonia-02.webp" alt="Perfume">
         <h3>Malbec Pure Gold Desodorante Colônia 100Ml</h3>
-        <p>R$ 170,00</p>
+        <p><span class="preco-antigo">R$ 239,90</span> <span class="preco-novo">R$ 200,00</span></p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
       <div class="card">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/1af375cb-0fb1-462e-916a-da119ae9e243-malbec-black-desodorante-colonia-100ml.webp" alt="Perfume">
         <h3>Malbec Black Desodorante Colônia 100Ml</h3>
-        <p>R$ 220,00</p>
+        <p><span class="preco-antigo">R$ 249,90</span> <span class="preco-novo">R$ 200,00</span></p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
       <div class="card">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/f896176d-a231-445a-80b1-d00b64780432-bot-84390-malbec-magnetic-desodorante-colonia-frontal-01.webp" alt="Perfume">
         <h3>Malbec Magnetic Desodorante Colônia 100Ml</h3>
-        <p>R$ 200,00</p>
+        <p><span class="preco-antigo">R$ 239,90</span> <span class="preco-novo">R$ 200,00</span></p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
