--- a/index.html
+++ b/index.html
@@ -178,6 +178,41 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
+      <div class="card">
+        <img src="./image/Elysee_refil200g_B52591.webp" alt="Hidratante">
+        <h3>Refil Creme Desodorante Hidratante Corporal Acetinado Elysée 200G</h3>
+        <p>R$ 75,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/REF_LILY_CR_ACET_DES_HID_CPO_250g_V2-B48062-Textura.webp" alt="Hidratante">
+        <h3>Refil Creme Acetinado Hidratante Desodorante Corporal Lily 250G</h3>
+        <p>R$ 80,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/db878c07-be04-48f6-ae39-0eb1ac7e0f6e-bot-49886-cuide-se-bem-leite-mel-refil-creme-hidratante-frontal-01.webp" alt="Hidratante">
+        <h3>Refil Loção Desodorante Hidratante Cuide-Se Bem Leite E Mel 350Ml</h3>
+        <p>R$ 40,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/1fa93acb-8255-4bdb-b16e-bdbcb3a7fc5d-bot-49888-cuide-se-bem-nuvem-locao-400ml-frontal-01.webp" alt="Hidratante">
+        <h3>Loção Hidratante Desodorante Corporal Cuide-se Bem Nuvem 400ml</h3>
+        <p>R$ 55,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/CBEM_COND_NUVEM_250ml_B82794_CONCEITO.webp" alt="Condicionador">
+        <h3>Condicionador Cuide-Se Bem Nuvem 250Ml</h3>
+        <p>R$ 30,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
     </div>
   </main>
 
