--- a/index.html
+++ b/index.html
@@ -53,6 +53,30 @@
       </div>
 
       <div class="card">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/c3174ec1-3f99-4502-b6b9-046264ada2ec-bot-55648-men-nba-desodorante-colonia-02.webp" alt="Perfume">
+        <h3>Men Nba Desodorante Colônia 100Ml</h3>
+        <p><span class="preco-antigo">R$ 179,90</span> <span class="preco-novo">R$ 120,00</span></p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/br-11134201-23030-km4jucpzvkov4f.jpg" alt="Perfume">
+        <h3>Perfume Natura Essencial OUD Feminino 100 ml Deo Parfum</h3>
+        <p><span class="preco-antigo">R$ 278,90</span> <span class="preco-novo">R$ 200,00</span></p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/NATBRA-76423_2.jpg" alt="Perfume">
+        <h3>Essencial Exclusivo Feminino 100 ml Deo Parfum</h3>
+        <p><span class="preco-antigo">R$ 278,90</span> <span class="preco-novo">R$ 200,00</span></p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
         <img src="./image/dc3c1f13-3d21-4274-9d50-4be908bb3f35-74438.webp" alt="Perfume">
         <h3>Arbo Desodorante Colônia 100Ml</h3>
         <p>R$ 124,90</p>
