--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
       </div>
 
       <div class="card">
+        <img src="./image/74dc3cd0-ae4d-4c52-84ee-aed28302e80a-bot-55195-cuide-se-bem-cereja-livre-creme-hidratante-refil-maos.webp" alt="Hidratante">
+        <h3>Refil Loção Hidratante Desodorante Corporal Cuide-Se Bem Cereja Livre 350Ml</h3>
+        <p>R$ 44,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
         <img src="./image/1fa93acb-8255-4bdb-b16e-bdbcb3a7fc5d-bot-49888-cuide-se-bem-nuvem-locao-400ml-frontal-01.webp" alt="Hidratante">
         <h3>Loção Hidratante Desodorante Corporal Cuide-se Bem Nuvem 400ml</h3>
         <p>R$ 55,00</p>
@@ -234,6 +241,27 @@
         <img src="./image/CBEM_COND_NUVEM_250ml_B82794_CONCEITO.webp" alt="Condicionador">
         <h3>Condicionador Cuide-Se Bem Nuvem 250Ml</h3>
         <p>R$ 30,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/5d0b7acb-80dc-409e-aeb0-def20a154cd2-bot-51144-cuide-se-bem-leite-e-mel-desodorante-roll-on-ambientada.webp" alt="Desodorante">
+        <h3>Desodorante Antitranspirante Roll-On Cuide-Se Bem Leite E Mel 55Ml</h3>
+        <p>R$ 28,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/c945262d-2364-47c5-8d75-3fb06513eb53-bot-48546-nuvem-roll-on-ambientada.webp" alt="Desodorante">
+        <h3>Desodorante Roll-On Cuide-Se Bem Nuvem 55Ml</h3>
+        <p>R$ 28,90</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/dc0d458d-4b30-4a98-8775-f595c3e72628-bot-47147-cuide-se-bem-invisible-protect-desodorante-roll-on-frontal-01.webp" alt="Desodorante">
+        <h3>Antitranspirante Roll-On Cuide-Se Bem Invisible Protect 55Ml</h3>
+        <p>R$ 25,90</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
