--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
       </div>
 
       <div class="card">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/85323GG.jpg" alt="Perfume">
+        <h3>Boticoll Crazy Des Col Feelings V2 100Ml</h3>
+        <p><span class="preco-antigo">R$ 154,90</span> <span class="preco-novo">R$ 120,00</span></p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
         <img src="./image/dc3c1f13-3d21-4274-9d50-4be908bb3f35-74438.webp" alt="Perfume">
         <h3>Arbo Desodorante Colônia 100Ml</h3>
         <p>R$ 124,90</p>
