--- a/index.html
+++ b/index.html
@@ -280,19 +280,7 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card" data-category="promocao">
-        <div class="promo-tag">Promoção</div>
-        <img src="./image/B48130_Malbec_Desodorante_Colônia_1.webp" alt="Perfume">
-        <h3>Malbec Desodorante Colônia 100Ml</h3>
-        <p>
-          <span class="preco-antigo">R$ 209,90</span>
-          <span class="preco-novo">R$ 170,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
-        </p>
-        <p class="preco-parcelado">ou 2x de R$ 104,95 sem juros no cartão</p>
-        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
-      </div>
-
-      <div class="card" data-category="batom" data-category="promocao">
+      <div class="card" data-category="batom">
         <div class="promo-tag">Promoção</div>
         <img src="./image/d831871f-189d-47e2-8536-7fb125222df1-qdb-58181-batom-cremoso-cor-120-frontal-01.webp" alt="batom">
         <h3>Batom Nude Marrom 120 Cremoso 3,8G</h3>
@@ -304,7 +292,7 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card" data-category="batom" data-category="promocao">
+      <div class="card" data-category="batom">
         <div class="promo-tag">Promoção</div>
         <img src="./image/d63efe40-0e58-4670-b20f-87068f355015-qdb-58186-batom-cremoso-cor-223-frontal-01.webp" alt="batom">
         <h3>Batom Rosa 223 Cremoso 3,8g</h3>
@@ -316,7 +304,7 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card" data-category="batom" data-category="promocao">
+      <div class="card" data-category="batom">
         <div class="promo-tag">Promoção</div>
         <img src="./image/d831871f-189d-47e2-8536-7fb125222df1-qdb-58181-batom-cremoso-cor-120-frontal-01 (1).webp" alt="batom">
         <h3>Batom Nude Marrom 120 Cremoso 3,8g</h3>
@@ -328,7 +316,7 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card" data-category="batom" data-category="promocao">
+      <div class="card" data-category="batom">
         <div class="promo-tag">Promoção</div>
         <img src="./image/6a6fb4c0-aafc-4679-8482-977e5694d13f-qdb-58180-batom-cremoso-cor-227-frontal-01.webp" alt="batom">
         <h3>Batom Rosa 227 Cremoso 3,8g</h3>
@@ -340,7 +328,7 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card" data-category="batom" data-category="promocao">
+      <div class="card" data-category="batom">
         <div class="promo-tag">Promoção</div>
         <img src="./image/84d8e08c-0445-4913-8fb7-1ebd5f3a3b60-qdb-58189-batom-mate-cor-330-frontal-01.webp" alt="batom">
         <h3>Batom Vermelho 330 Efeito Mate 3,8g</h3>
@@ -352,13 +340,25 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card" data-category="batom" data-category="promocao">
+      <div class="card" data-category="batom">
         <div class="promo-tag">Promoção</div>
         <img src="./image/9e056be3-3891-45a2-9711-e5595b018993-qdb-58188-batom-cremoso-cor-540-frontal-01.webp" alt="batom">
         <h3>Batom Malva 540 Cremoso 3,8g</h3>
         <p>
           <span class="preco-antigo">R$ 27,90</span>
           <span class="preco-novo">R$ 24,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-pix">ou 1x de R$ 27,90 sem juros no cartão</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card" data-category="batom">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/B75921.webp" alt="batom">
+        <h3>Batom Rosa Pink Sophie 3,3g</h3>
+        <p>
+          <span class="preco-antigo">R$ 27,90</span>
+          <span class="preco-novo">R$ 20,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
         </p>
         <p class="preco-pix">ou 1x de R$ 27,90 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
