--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
 
       <div class="card" data-category="promocao">
         <div class="promo-tag">Promoção</div>
+        <img src="./image/630522ce-b3d9-4f08-8d13-2b6a7802c227-bot-85566-kit-pais-zaad-01.webp" alt="Perfume">
+        <h3>Kit Presente Dia dos Pais Zaad (2 itens)</h3>
+        <p>
+          <span class="preco-antigo">R$ 404,90</span>
+          <span class="preco-novo">R$ 300,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 3x de R$ 134,96 sem juros no cartão</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card" data-category="promocao">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/c3174ec1-3f99-4502-b6b9-046264ada2ec-bot-55648-men-nba-desodorante-colonia-02.webp" alt="Perfume">
         <h3>Men Nba Desodorante Colônia 100Ml</h3>
         <p><span class="preco-antigo">R$ 179,90</span> <span class="preco-novo">R$ 120,00</span></p>
@@ -116,6 +128,30 @@
         <img src="./image/3490a49c-cd41-4795-b2da-8b0ad726584f-bot-52041-lily-lumiere-desodorante-antitranspirante-aerossol-frontal-01.webp" alt="Perfume">
         <h3>Desodorante Antitranspirante Aerosol Lily Lumière 75G/125Ml</h3>
         <p>R$ 30,00</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card" data-category="promocao">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/desodorante-aerosol-antitranspirante-nativa-spa-ameixa-75g.webp" alt="Perfume">
+        <h3>Desodorante Aerosol Antitranspirante Nativa SPA Ameixa 75g/125ml</h3>
+        <p>
+          <span class="preco-antigo">R$ 37,90</span>
+          <span class="preco-novo">R$ 28,90</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 1x de R$ 37,90 sem juros no cartão</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card" data-category="promocao">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/015cba79-0bbb-41ce-ac43-e23bb4d1b24e-bot-47151-cuide-se-bem-zero-aluminio-desodorante-antitranspirante-aerosol-frontal-01.webp" alt="Perfume">
+        <h3>Antitranspirante Aerosol Jato Seco Cuide-se Bem Zero Alumínio 90g/150ml</h3>
+        <p>
+          <span class="preco-antigo">R$ 37,90</span>
+          <span class="preco-novo">R$ 30,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 1x de R$ 37,90 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
@@ -361,6 +397,22 @@
           <span class="preco-novo">R$ 20,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
         </p>
         <p class="preco-pix">ou 1x de R$ 27,90 sem juros no cartão</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/7b4111db-f5da-4257-a41e-1f595b9d9b43-eudora-instance-frutas-vermelhas-sabonete-barra-52378-cartucho-2.webp" alt="sabonete">
+        <h3>Sabonete Vegetal em Barra Perfumado Instance Frutas Vermelhas 4x80g</h3>
+        <span class="preco-novo">R$ 29,99</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        <p class="preco-pix">ou 1x de R$ 29,99 sem juros no cartão</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
+      <div class="card">
+        <img src="./image/aed95831-68c4-42cb-91c4-a85267afa048-bot-50879-cuide-se-bem-pessegura-caixa-sabonetes-barra-frontal-01.webp" alt="sabonete">
+        <h3>Sabonete em Barra Cuide-Bem Pessegura 4x80g</h3>
+        <span class="preco-novo">R$ 35,90</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        <p class="preco-pix">ou 1x de R$ 35,90 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
