--- a/index.html
+++ b/index.html
@@ -416,6 +416,18 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
+      <div class="card" data-category="batom">
+        <div class="promo-tag">Promoção</div>
+        <img src="./image/NATBRA-2830_1.jpg" alt="sabonete">
+        <h3>Sabonete em Barra Puro Vegetal Tododia Algodão</h3>
+        <p>
+          <span class="preco-antigo">R$ 34,90</span>
+          <span class="preco-novo">R$ 28,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-pix">ou 1x de R$ 34,90 sem juros no cartão</p>
+        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
+      </div>
+
     </div>
   </main>
 
