--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card" data-category="batom">
+      <div class="card">
         <div class="promo-tag">Promoção</div>
         <img src="./image/NATBRA-2830_1.jpg" alt="sabonete">
         <h3>Sabonete em Barra Puro Vegetal Tododia Algodão</h3>
